--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,5 +40,5 @@ iframe {
 @import "event";
 @import "blog";
 @import "spatial-tech";
-@import "dh";
+@import "research-and-development";
 @import "research-project";
