Change TinkerTank to Makerspace

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,5 +34,7 @@
 	</div> <!-- end content -->
 </div> <!-- end wrapper -->
 <div id="alert-message">
-<p>The Scholars’ Lab staff is offering a mix of remote and in-person consultations, workshops, and events. Visit our <a href="https://scholarslab.lib.virginia.edu/makerspace/">TinkerTank</a> in Clemons or contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to schedule a GIS, VR, or digital project consultation.</p>
+<p>The Scholars’ Lab staff is offering a mix of remote and in-person
+consultations, workshops, and events. Visit our <a
+href="https://scholarslab.lib.virginia.edu/makerspace/">Makerspace</a> or contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to schedule a GIS, VR, or digital project consultation.</p>
 </div>
