chaged twitter link to bsky...
need to change twitter icon still, but will do as part of web sprint?

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
           <img src="{{ '/assets/img/svg/facebook-white.svg' | relative_url }}" alt="Facebook icon">
           <span>Facebook</span>
         </a>
-        <a href="https://twitter.com/scholarslab">
+        <a href="https://bsky.app/profile/scholarslab.bsky.social">
           <img src="{{ '/assets/img/svg/twitter-white.svg' | relative_url }}" alt="Twitter icon">
           <span>Twitter</span>
         </a>
