--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,72 +1,3 @@
-<footer class="footer-wrapper">
-  <div class="footer-main-grid">
-
-    <div class="footer__to-top">
-        <a href="#main" aria-label="Back to top">
-          <img src="{{ '/assets/img/svg/thin-up-arrow-white.svg' | relative_url }}" alt="Up arrow">
-          <span>Back<br/>to top</span>
-        </a><br><br>
-        <a href="https://github.com/scholarslab/scholarslab.org/blob/master/docs/authoring-and-editing.md">How to blog</a>
-    </div>
-
-    <div class="footer__sitemap">
-      <div class="footer-map__title">Explore</div>
-      <div class="footer-map__links">
-        <a href="{{ site.url }}">Home</a>
-        <a href="{{ site.url }}/about">About</a>
-        <a href="{{ site.url }}/events">Events</a>
-      </div>
-    </div>
-
-    <div class="footer__connect">
-      <div class="footer-connect__title">Connect</div>
-      <div class="footer-connect__social">
-        <a href="https://www.facebook.com/scholarslab/">
-          <img src="{{ '/assets/img/svg/facebook-white.svg' | relative_url }}" alt="Facebook icon">
-          <span>Facebook</span>
-        </a>
-        <a href="https://twitter.com/scholarslab">
-          <img src="{{ '/assets/img/svg/twitter-white.svg' | relative_url }}" alt="Twitter icon">
-          <span>Twitter</span>
-        </a>
-        <a href="https://github.com/scholarslab">
-          <img src="{{ '/assets/img/svg/github-white.svg' | relative_url }}" alt="Github icon">
-          <span>Github</span>
-        </a>
-        <a href="mailto:scholarslab@virginia.edu">
-          <img src="{{ '/assets/img/svg/envelope-outline-white.svg' | relative_url }}" alt="Email icon">
-          <span>Email us</span>
-        </a>
-        <a href="https://scholarslab.lib.virginia.edu/feed.xml">
-          <!-- <div>RSS icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
-          <img src="{{ '/assets/img/svg/rss.svg' | relative_url }}">
-          <span>RSS feed</span>
-      </div>
-      <!--div class="footer-connect__news">
-        <div class="footer-news__title">Newsletter</div>
-        <div class="footer-news__modal"><!-- icon wrapped in JS trigger for newsletter modal to come up -></div>
-      </div-->
-    </div>
-
-    <div class="footer__contact">
-      <div class="footer-contact__title">Contact</div>
-      <div class="footer-contact__email"><span>Email:</span><a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a></div>
-      <div class="footer-contact__address"><span>Address:</span>P.O. Box 400115<br/>Charlottesville, VA<br/>22904</div>
-      <div class="footer-contact__phone"><span>Phone:</span>434-243-8800</div>
-    </div>
-
-    <div class="footer__logos">
-      <a class="footer-logo__slab" href="{{ site.url }}" aria-label="Scholars' Lab home">
-        <img src="/assets/img/logo-smallest.png" alt="SLab logo">
-        {% comment %}{% include nav-logo.html %}{% endcomment  %}
-      </a>
-      <a class="footer-logo__uva" href="https://www.library.virginia.edu/" aria-label="UVA Library home">
-        <img src="{{ '/assets/img/UVALIB_primary_white_web.png' | relative_url }}" alt="Twitter icon">
-      </a>
-      <a class="footer-logo__license" rel="license" href="http://creativecommons.org/licenses/by/4.0/" aria-label="Creative Commons License">
-        <img alt="Creative Commons License" style="border-width:0" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by.svg"/>
-      </a>
-    </div>
-
-  </div>
+<footer id="footer">
+  <p>Footer Stuff</p>
 </footer>
