--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -1,661 +1,104 @@
-/* Homepage, Version 2 */
-
-html, body {
-	background-color: white; // blend modes need this to work
-}
-/* ## Universal styles: */
-
-
-[class*="home-"][class*="__title"] {
-	position: relative;
-	font-size: 2em;
-	text-transform: uppercase;
-	font-weight: 900;
-	line-height: 1;
-	margin-bottom: .5em;
-	margin-top: 1em;
-	color: $navgray;
-	a {
-		font-weight: 900;
-		color: $navgray;
-		border-bottom: initial !important;
-	}
-	@media screen and (min-width: 1200px) {
-		font-size: 2em;
-	}
-}
-
-[class*="home__"] {
-	position: relative;
-	margin: 1em;
-	padding: 1em;
-}
-
-[class*="home-"][class*="__text"],
-[class*="home-"][class*="__content"]{
-	p:first-of-type {
-		margin-top: 0 !important; // no margin collapse if in flexboxes
-	}
-}
-
-/* ## Main styles: */
-
-.home-wrapper {
-	position: relative;
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem; // 18px
-	}
-}
-
-/* # Landing: */
-
-.home-landing-wrapper {
-	position: relative;
-}
-
-.home-landing__big-title {
-	position: relative;
-	height: calc(100vh + 1px);
-	width: 100%;
-	padding: 0 4.167%;
-	background-color: $navgray;
-//	border-bottom: 1px dotted rgba(255,255,255,.5);
-}
-
-.home-title__text {
-	position: relative;
-	display: grid;
-	height: 76vh;
-	width: 100%;
-	align-items: center;
-	font-size: 2.25em;
-	font-weight: 900;
-	line-height: 1;
-	text-transform: uppercase;
-	color: white;
-	background-color: black;
-	mix-blend-mode: lighten;
-	&::before {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: lightblue;
-		background-image: linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,.1)), url('../img/decorative/color-splatter-purple.jpg');
-		background-size: cover;
-		mix-blend-mode: multiply;
-	}
-	span {
-		display: inline-block;
-	}
-	@media screen and (min-width: 350px) {
-		font-size: 2.5em;
-	}
-	@media screen and (min-width: 600px) {
-		font-size: 3em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 3.5em;
-	}
-	@media screen and (min-width: 1024px) {
-		font-size: 4em;
-	}
-	@media screen and (min-width: 1400px) {
-		font-size: 5em;
-	}
-}
-
-/* Size Breakpoints: */
-
-.show-if-big--css {
-	display: none !important;
-	@media screen and (min-width: 600px) {
-		display: inline-block !important;
-	}
-}
-
-.show-if-small--css {
-	display: inline-block !important;
-	@media screen and (min-width: 600px) {
-		display: none !important;
-	}
-}
-
-/* * * * ## Hero: * * * */
-
-.home-landing__hero-text {
-	position: relative;
-	display: grid;
-	width: 100%;
-	padding: 0 4.167%;
-	@media screen and (min-width: 1200px) {
-//		padding: 0 8.33%;
-	}
-}
-
-[class*="home-hero__"] {
-	position: relative;
-	color: $textgray;
-	margin: .6em;
-	margin-top: 0;
-	padding: 0 .6em;
-	h3 {
-		position: relative;
-		margin: 0;
-		font-size: 2rem;
-		font-weight: 900;
-		line-height: 1;
-		text-transform: uppercase;
-		color: $navgray;
-		padding-bottom: 4px;
-		border-bottom: 2px solid $medskyblue;
-	}
-	p:first-of-type {
-		font-size: 1.5em; // 3/4 scale
-		line-height: 1.5;
-		margin-bottom: 2em;
-	}
-
-}
-
-.home-hero__description {
-	margin-top: 1.5em;
-}
-
-/* * * * ## Main content: * * * */
-
-.home-main-content {
-	position: relative;
-	display: grid;
-	grid-template-areas: "lib"
-						 "faq"
-						 "contact"
-						 "find"
-						 "events"
-						 "hours"
-						 "students"
-						 "maker"
-						 "spatial";
-	justify-content: center;
-	padding: 0 4.167%;
-	color: $textgray;
-	@media screen and (min-width: 1024px) {
-		grid-template-columns: 1fr 1fr;
-		grid-template-areas: "faq lib"
-							 "contact contact"
-							 "find events"
-							 "hours events"
-							 "students students"
-							 "spatial maker";
-	}
-}
-
-/* Library: */
-
-.home__library {
-	grid-area: lib;
-
-    .uva-library-logo-link {
-        display:block;
-        float:right;
-        width: 170px;
-        padding: 1px 5px;
-        border:0;
-        img {
-            max-width:100%;
-            width: auto;
-        }
-    }
-}
-
-.home-lib__title {
-
-}
-
-.home-lib__content {
-
-}
-
-
-/* FAQ: */
-
-.home__faq {
-	grid-area: faq;
-}
-
-.home-faq__title {
-
-}
-
-.home-faq__questions {
-
-}
-
-.home-faq__charter {
-
-}
-
-.home-charter__title {
-
-}
-
-.home-charter__content {
-
-}
-
-.home-faq__people {
-
-}
-
-.home-people__title {
-
-}
-
-.home-people__content {
-
-}
-
-.home-faq__cta {
-
-}
-
-/* Contact us: */
-
-.home__contact {
-	grid-area: contact;
-	border: 4px solid #f1f1f1;
-}
-
-.home-contact__title {
-	margin-top: .5em !important;
-}
-
-.home-contact__wrapper {
-	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
-	@media screen and (min-width: 1000px) {
-		flex-flow: row nowrap;
-	}
-}
-
-.home-contact__content {
-//	align-self: start;
-	padding: 0 2.5em 0 0;
-	p {
-		&:last-of-type {
-			margin-bottom: 0;
-		}
-	}
-}
-
-/* Newsletter: */
-
-.home-contact__newsletter {
-	form {
-		h2 {
-			line-height: 1;
-		}
-		input {
-			font-family: "Raleway", sans-serif;
-			&.button {
-				font-weight: bold;
-				letter-spacing: 1px;
-				height: auto !important;
-				font-size: 1.1em !important;
-				padding: 4px 16px !important;
-				background-color: #555 !important;
-				&:hover,
-				&:focus {
-					background-color: #333 !important;
-				}
-			}
-		}
-	}
-}
-
-.home-news__text {
-
-}
-
-.home-news__prompt {
-
-}
-
-.home-listserv__input {
-
-}
-
-.home-listserv__btn {
-
-}
-
-.home-contact__email {
-
-}
-
-.home-contact__consult {
-
-}
-
-/* Find us: */
-
-.home__find-us {
-	grid-area: find;
-	@media screen and (min-width: 768px) {
-		padding-left: 0 !important;
-		margin-left: 0 !important;
-	}
-
-}
-
-.home-find__title {
-
-}
-
-.home-find__content {
-	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
-	ul {
-		list-style-type: none;
-		padding-left: 0;
-		padding-right: 2em;
-		margin: 0;
-		li {
-		//	display: inline-block;
-			line-height: 1.2;
-			margin-bottom: .5em;
-			padding: .5em;
-			border: 1px solid $textgray;
-			span {
-				font-weight: bold;
-			}
-		}
-	}
-	@media screen and (min-width: 600px) {
-		flex-flow: row-reverse nowrap;
-	}
-}
-
-.home-find__diagram {
-	position: relative;
-	svg {
-		position: absolute;
-		top: 0;
-		left: 0;
-		[class*="fill__"] {
-			opacity: .05;
-			-webkit-transition: opacity .3s;
-			transition: opacity .3s;
-			&:hover, &:focus {
-				opacity: .7;
-			}
-		}
-	}
-}
-
-.highlight-text--js {
-	color: red;
-}
-
-.highlight-svg--js {
-	opacity: .7 !important;
-}
-
-/* Events: */
-
-.home__events {
-	grid-area: events;
-}
-
-.home-events__title {
-
-}
-
-.home-events__upcoming:not(.home-events__cta) {
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-start;
-	div:not(.events-item__cta):not(.home-events__cta) {
-		width: 100%;
-		border: 1px solid $textgray !important;
-		margin-top: 1em;
-		padding: .5em 1em;
-		span {
-			font-weight: bold;
-		}
-		&:first-of-type {
-			margin-top: 0;
-		}
-	}
-}
-
-/* Open office hours: */
-
-.home__office-hours {
-	grid-area: hours;
-}
-
-.home-hours__title {
-
-}
-
-.home-hours__when {
-
-}
-
-.home-hours__info {
-
-}
-
-.home-hours__cta {
-	bottom: 0;
-	left: 0;
-}
-
-/* Student Opportunities: */
-
-.home__student-opps {
-	grid-area: students;
-	position: relative;
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: auto auto;
-	max-width: 100%;
-	@media screen and (min-width: 1055px) {
-		grid-template-columns: 2fr 2fr;
-		grid-template-rows: auto;
-	}
-}
-
-.home-student__content {
-	@media screen and (min-width: 1055px) {
-		margin-right: 1em;
-		padding-right: 1em;
-	}
-}
-
-.home-student__title {
-
-}
-
-.home-student__text {
-	display: inline-block;
-	p {
-
-	}
-}
-
-.home-student__img-container {
-	margin-left: 1em;
-	margin-top: 2em;
-	padding-left: 1em;
-	position: relative;
-	@media only screen and (max-width: 1055px){
-			display: none;
-	}
-}
-
-#for-students-image{
-	max-width: 100%;
-	max-height: 100%;
-}
-
-.home-student__cta {
-	bottom: 0;
-	left: 0;
-}
-
-/* Makerspace: */
-
-.home__makerspace {
-	grid-area: maker;
-}
-
-.home-maker__title {
-
-}
-
-.home-maker__hours {
-	position: relative;
-	border: 4px solid $brightgrape;
-	font-family:  monospace;
-	font-size: 20px;
-	text-align: right;
-	margin-top: calc(2em + 4px);
-	padding: .5em 1em;
-	div {
-		position: absolute;
-		font-family: "Oswald", sans-serif;
-		font-size: 1.5rem;
-		font-weight: 600;
-		text-transform: uppercase;
-		text-align: left;
-		line-height: 1;
-		transform: translate(-1em, calc(-1.5em - 4px));
-	}
-	span {
-		float: left;
-		color: $brightgrape;
-	}
-}
-
-.home-maker__text {
-
-}
-
-.home-maker__cta {
-
-}
-
-/* Spatial Tech: */
-
-.home__spatial-tech {
-	grid-area: spatial;
-}
-
-.home-spatial__title {
-
-}
-
-.home-spatial__text {
-
-}
-
-#snowday-banner{
-	font-family: "Raleway", sans-serif;
-	border: 4px solid #76e3ef;
-	background-color: white;
-	color: #873cdd;
-	top: 60px;
-	width: 100%;
-	position: absolute;
-	padding-left: 15px;
-	padding-right: 0px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	margin-left: 0px;
-	z-index: 1;
-	text-align: center;
-}
-
-#snowday-banner h1{
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
-
-@media only screen and (max-width: 600px){
-		.post-main-content{
-		padding-left: 8.3%;
-		padding-right: 8.3%;
-	}
-}
-
-#hero-arrow{
-	width: 0.5em;
-	justify-self: center;
-	position: absolute;
-	bottom: 16px;
-}
-
-#makerspace-location-label{
-	text-align: center;
+#library-banner {
+	padding: 1rem;
+	background: $brand-blue;
 }
 
-#makerspace-plan{
-	position: absolute;
-	top: 0;
-	left: 0;
-	max-height: 75vh;
+#library-link {
+	display: block;
+	width: 150px;
 }
 
-#mc_embed_signup {
+#scholarslab-header {
 	padding: 2rem;
-	background-color: $blue-alt-lightest;
-	min-width: 400px;
-	h2 {
-		margin-top:0;
-		font-size: 1.25rem;
+	background: rgba($brand-blue, 1);
+	display:flex;
+	flex-direction: column;
+	flex-wrap:nowrap;
+	min-height: 40vh;
+	justify-content: center;
+	color: #fff;
+}
+
+#slab-logo {
+	display:block;
+	width: 300px;
+}
+
+#slab-logo svg {
+	fill: #ffffff;
+	max-width:100%;
+}
+
+nav a {
+	text-decoration:none;
+	margin-right: 1rem;
+	color: white;
+}
+
+#primary-navigation {
+	padding: 1rem 2rem;
+	background: $teal-dark;
+}
+
+#newsletter {
+	background: $teal-darker;
+	color: white;
+	padding: 1rem;
+	text-align: center;
+	font-size: 1.5rem;
+}
+
+section.feature {
+	display:flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	min-height: 400px;
+
+	&:nth-child(even) {
+		flex-direction: row-reverse;
 	}
 
-	label {
+	div {
+		width:50%;
+		padding: 2rem;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+	}
+
+	&#recent-activity {
+		min-height: auto;
+		div {
+			justify-content: flex-start;
+		}
+	}
+	figure {
 		display:block;
-	}
-	input[type=text],
-	input[type=email],
-	fieldset {
-		margin-bottom: 1rem;
-	}
-
-	input[type=radio] + label {
-		display:inline;
-	}
-	fieldset {
-		border-style:none;
+		width: 50%;
+		background: rgba($brand-blue, .25);
+		margin:0;
 		padding:0;
-		ul {
-			margin:0;
-			padding:0;
-			list-style:none;
+		position: relative;
+		img {
+			max-width: 100%;
+			width: auto;
+			height: auto;
+		}
+		figcaption {
+			position:absolute;
+			bottom:0;
+			left:0;
 		}
 	}
 
-	input[type=submit] {
-		border:0;
-		border-radius: 5px;
-		color: white;
-		background-color: $brand-blue !important;
+}
 
-		&:hover,
-		&:focus {
-			background-color: $brand-blue-light !important;
-		}
-
-		&:active {
-			background-color: $brand-blue-lighter !important;
-		}
+footer {
+	background: $blue-alt-dark;
+	color: white;
+	padding: 1rem;
+	p {
+		margin:0;
 	}
+
 }
