Layout and template updates.
- Streamlines a good number of layouts and pages.
- Attempts to make page/post headers uniform.
- Visually merges SLab header and navigation.
- Only displays a taller SLab header on homepage.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,7 @@
 <nav id="primary-navigation">
-<a href="">Opportunities</a>
-<a href="">Code + Design</a>
-<a href="">Makerspace</a>
-<a href="">Spatial Tech</a>
-<a href="">Our Work</a>
-<a href="">More</a>
+<a href="/for-students">Opportunities</a>
+<a href="/research-and-development">Code + Design</a>
+<a href="/makerspace">Makerspace</a>
+<a href="/spatial-technologies">Spatial Tech</a>
+<a href="/work">Our Work</a>
 </nav>
