--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,8 +1,11 @@
 <div id="scholarslab-header">
+    <hgroup>
     <a href="{{ site.url }}" id="slab-logo" aria-label="Scholars' Lab home">
         {% include nav-logo.html %}
     </a>
     {% if page.title == 'Home' %}
     <p>A community for the learning + practice of digital experimental scholarship</p>
     {% endif %}
+    </hgroup>
+    {% include navbar.html %}
 </div>
