--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,12 @@ iframe {
     width: 100%;
 }
 
+img {
+	max-width: 100%;
+	width: auto;
+	height: auto;
+}
+
 /*
  * Possibly prevents horizontal scroll on any
  * embeded Github gists.
@@ -26,27 +32,165 @@ iframe {
 	max-width: 600px;
 }
 
+
 /* Partials: */
 
 @import "_colors/slab-palette";
-@import "universal-styles";
-@import "home";
-@import "navbar";
-@import "alert-message";
-@import "page";
-@import "logos";
-@import "makerspace";
-@import "footer";
-@import "text";
-@import "fellowship";
-@import "research";
-@import "progress-tracker"; // only include pre-v1.0.0
-@import "blog-post";
-@import "person";
-@import "people";
-@import "events";
-@import "event";
-@import "blog";
-@import "spatial-tech";
-@import "research-and-development";
-@import "research-project";
+
+#library-banner {
+	padding: 1rem;
+}
+
+#library-link {
+	display: block;
+	width: 150px;
+}
+
+#scholarslab-header {
+	padding: 2rem;
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	flex-wrap:nowrap;
+
+	.home & {
+		min-height: 40vh;
+
+		hgroup {
+			align-self:flex-end;
+		}
+
+	}
+
+	p {
+		margin:0;
+	}
+
+}
+
+#slab-logo {
+	display:block;
+	width: 120px;
+
+	body.home & {
+		width: 300px;
+	}
+
+	height: auto;
+}
+
+#slab-logo svg {
+	fill: #ffffff;
+	max-width:100%;
+}
+
+nav a {
+	text-decoration:none;
+	margin-right: 1rem;
+	color: white;
+}
+
+#primary-navigation {
+
+}
+
+#banner,
+#main > header,
+#main > article header
+ {
+	background: rgba($brand-blue, 1);
+	color: white;
+}
+
+#library-banner {
+	background: rgba(0,0,0,.125);
+}
+
+#newsletter {
+	background: $teal-darker;
+	color: white;
+	padding: 1rem;
+	text-align: center;
+	font-size: 1.5rem;
+}
+
+section.feature {
+	display:flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	min-height: 400px;
+
+	&:nth-child(even) {
+		flex-direction: row-reverse;
+	}
+
+	div {
+		width:50%;
+		padding: 2rem;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+	}
+
+	&#recent-activity {
+		min-height: auto;
+		div {
+			justify-content: flex-start;
+		}
+	}
+	figure {
+		display:block;
+		width: 50%;
+		background: rgba($brand-blue, .25);
+		margin:0;
+		padding:0;
+		position: relative;
+		img {
+			max-width: 100%;
+			width: auto;
+			height: auto;
+		}
+		figcaption {
+			position:absolute;
+			bottom:0;
+			left:0;
+		}
+	}
+
+}
+
+#main {
+	& > header:first-of-type,
+	body.post & article header:first-of-type
+	{
+		background: rgba($brand-blue, 1);
+		color: white;
+		padding: 2rem 0;
+		display:flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		min-height: 30vh;
+
+		h1 {
+			margin:0 auto;
+			font-size: 3rem;
+			max-width: 900px;
+		}
+	}
+
+	.content {
+		max-width: 900px;
+		margin: 0 auto;
+	}
+}
+
+
+#footer {
+	background: $blue-alt-dark;
+	color: white;
+	padding: 1rem;
+	p {
+		margin:0;
+	}
+
+}
