Added homepage text

--- a/_includes/title.html
+++ b/_includes/title.html
@@ -4,7 +4,7 @@
         {% include nav-logo.html %}
     </a>
     {% if page.title == 'Home' %}
-    <p>A community for the learning + practice of digital experimental scholarship</p>
+    <p>Experiment in Community</p>
     {% endif %}
     </hgroup>
     {% include navbar.html %}
