Removing defunct unreferenced includes...
First searched site to see if used anywhere. For includes we're keeping, added a comment at top of code explaining what file does.

--- a/_includes/author-name.html
+++ b/_includes/author-name.html
@@ -1,3 +1,4 @@
+<!-- Formats author names for pulling into various places such as post.html and work.html layouts -->
 {% capture authorstring %}
 {% assign authors = include.authorid %}
 {% if authors.size > 0 %}
