--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -1,3 +1,4 @@
+<!-- Pulls into post.html layout to format post author credits -->
 {% assign authors = site.people | where: 'slug', include.authorid %}
 {% assign profile_image = '/assets/img/people/cropped/scholarslab.png' %}
 
