--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<!-- This file is not currently used anywhere; leaving in for now (7/2/2024) as might be intended for eventual dropdown menu use? -->
 <ul id="main-nav">
     <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
       {% include logotype.html %}
