--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,4 @@
+<!-- Site's main menu, appearing at the top of each page -->
 <nav id="primary-navigation">
 <a href="/for-students">Opportunities</a>
 <a href="/research-and-development">Code + Design</a>
