--- a/_includes/old-post-alert.html
+++ b/_includes/old-post-alert.html
@@ -1,3 +1,4 @@
+<!-- Message included on our blog posts from before the early 2017 migration from WordPress to Jekyll, noting formatting etc. may be off and how to contact us if you find an issue. -->
 {% assign posted_date = page.date | date: "%Y" | plus: 0 %}
 {% assign end_date = 2017 %}
 
