--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<!-- UVA Library Analytics -->
+<!-- Called in head.html; provides UVA Library Analytics tracking for our site-->
 <script type="text/javascript">
   var _paq = _paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
