--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,3 +1,4 @@
+<!-- This file covers the site header logo image, site tagline, and points to menu as encoded in /_includes/navbar.html-->
 <div id="scholarslab-header">
     <hgroup>
     <a href="{{ site.url }}" id="slab-logo" aria-label="Scholars' Lab home">
