Style and template updates for navigation.
Begins work on creating a two-tiered navigation
display. Current approach includes the following:

- Two new sections in the `_config.yml` to manage
  the contents of various navigation.
- Updates to the `navbar.html` template to use
  navigation data in the config.
- Less-than-ideal approach to visually indicate
  which navigation links are "current".

This commit only implements a secondary navigation
for the Opportunities/for-students section of the
site.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
 
 	{% include head.html %}
 	<body class="{{ page.title | slugify }}{% if page.og_type == 'article' %}
-	post{% endif %}">
+	post{% endif %}{% if page.path contains 'for-students' %} for-students{%
+	endif %}">
 		<header role="banner" id="banner">
 		{% include library-banner.html %}
 		{% include title.html %}
