--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,16 @@
 <!-- Site's main menu, appearing at the top of each page -->
-<nav id="primary-navigation">
-<a href="/for-students">Opportunities</a>
-<a href="/research-and-development">Code + Design</a>
-<a href="/makerspace">Makerspace</a>
-<a href="/spatial-technologies">Spatial Tech</a>
-<a href="/work">Our Work</a>
+<nav id="global-navigation">
+    <div id="primary-navigation">
+        {% for nav in site.primary-navigation %}
+        <a class="{{ nav.label | slugify }}" href="{{ site.baseurl }}/{{ nav.url }}">{{ nav.label }}</a>
+        {% endfor %}
+    </div>
+{% if page.path contains 'for-students' %}
+    <div id="secondary-navigation">
+        {% for item in site.for-students-navigation %}
+        {% assign subnav = site.pages | where: "name", item | first %}
+        <a href="{{ subnav.url }}">{{ subnav.title }}</a>
+        {% endfor %}
+    </div>
+{% endif %}
 </nav>
