Additional streamlining of partials.
- Renames `title.html` to `site-banner.html` for
  consistency;
- Moves code from separate navbar partial to the
  site-banner directly. Removes `navbar.html`.
- Removes `nav-logo.html` in favor of actual text
  using a web font instead of the SVG logo that
  uses Decotura.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	endif %}">
 		<header role="banner" id="banner">
 		{% include library-banner.html %}
-		{% include title.html %}
+		{% include site-banner.html %}
 		</header>
 		<main id="main" role="main">
 			{{ content }}
