--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <!-- If we have a site footer, we'll put its info here -->
-<footer id="footer">
+<footer role="contentinfo" id="footer">
   <p>Footer Stuff</p>
 </footer>
