--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,7 @@
 		<main id="main" role="main">
 			{{ content }}
 		</main>
-		<footer role="contentinfo" id="footer">
-			<p>Footer Stuff</p>
-		</footer>
+		{% include footer.html %}
 		<script src="{{ '/assets/js/main.js' | relative_url }}" type="text/javascript" charset="utf-8"></script>
         {% if page.title == 'Search' %}
 		<script src="https://unpkg.com/lunr/lunr.js" type="text/javascript" charset="utf-8"></script>
