--- a/_includes/old-post-alert.html
+++ b/_includes/old-post-alert.html
@@ -4,6 +4,6 @@
 
 {% if posted_date < end_date %}
 
-<div ID="migration-alert">We migrated this website to a new platform, and are working to correct formatting errors in older blog posts as a result. If you encounter an error, please send an email to <a href="mailto:scholarslab@virginia.edu?subject=Found a blog formatting error">scholarslab@virginia.edu</a>. Thanks!</div>
+<div id="migration-alert">We migrated this website to a new platform, and are working to correct formatting errors in older blog posts as a result. If you encounter an error, please send an email to <a href="mailto:scholarslab@virginia.edu?subject=Found a blog formatting error">scholarslab@virginia.edu</a>. Thanks!</div>
 
 {% endif %}
