--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% capture fulltitle %}{% if page.title %}{{ page.title | escape | append: " | Scholars' Lab" }}{% else %}{{ site.title | escape }}{% endif %}{% endcapture %}
   <title>{{ fulltitle }} </title>
-  
+
   {% assign description = page.excerpt | default: site.description | strip_html | normalize_whitespace | escape %}
   <meta name="description" content="{{ description }}">
-  
+
   <!-- Open Graph http://ogp.me/ -->
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:description" content="{{ description }}">
@@ -28,15 +28,15 @@
   {% endfor %}
   {% endif %}
 
-  <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,400i,600,700,700i,900|Oswald:200,400,600,700|Inconsolata:400,700|VT323" rel="stylesheet">
+  <!-- UVA Branding Fonts -->
+  <link href="https://use.typekit.net/tca4szh.css" rel="stylesheet">
   <link rel="stylesheet" href="{{ "assets/css/style.css" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="{{ "assets/css/print.css" | relative_url }}">
-  <link rel="stylesheet" type="text/css" href="{{ "assets/css/zenburn.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}/">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  
+
   <!--  favicon -->
-  
+
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
