--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,34 @@
 ---
 ---
+/* Variables */
+:root {
+	--franklin-gothic-urw: franklin-gothic-urw, Arial, sans-serif;
+	--franklin-gothic-urw-comp: franklin-gothic-urw-comp, Arial, sans-serif;
+	--franklin-gothic-urw-cond: franklin-gothic-urw-cond, Arial, sans-serif;
+	--adobe-caslon-pro: adobe-caslon-pro, Garamond, serif;
+	--bodoni-urw: bodoni-urw, serif;
+
+	/* Brand Color Palate*/
+	--uvalib-main-rotunda-orange: #E57200;
+	--uvalib-main-jefferson-blue: #232D4B;
+	--uvalib-main-white: #FFFFFF;
+	--uvalib-main-black: #000000;
+
+	/*Secondary Brand Colors*/
+	--uvalib-secondary-web-orange: rgb(235, 95, 12);
+	--uvalib-secondary-web-blue: #141E3C;
+	--uvalib-secondary-light-gray: #F1F1F1;
+	--uvalib-secondary-medium-gray: #DADADA;
+	--uvalib-text-grey: #595959; /*ADA compliant*/
+	--uvalib-text-dk-grey: #474747; /*ADA compliant for hover over shaded table rows*/
+	--uvalib-text-almost-black: #212121; /*ADA compliant*/
+	--uvalib-secondary-emergency-red: #E00000; /*ADA compliant*/
+	--uvalib-secondary-cyan: rgb(0, 159, 223);
+	--uvalib-secondary-yellow: #FDDA24;
+	--uvalib-secondary-teal: #25CAD3;
+	--uvalib-secondary-magenta: #EF3F6B;
+	--uvalib-secondary-green: #008000; /*ADA compliant*/
+	}
 
 /* General Styles: */
 
@@ -10,8 +39,11 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "Raleway", sans-serif;
+	font-family: var(--franklin-gothic-urw);
+    font-weight: 300;
+	font-size: 20px;
 	line-height: 1.5; // if 16px, = 24px line height
+	color: var(--uvalib-text-almost-black);
 }
 
 iframe {
@@ -39,6 +71,7 @@ img {
 
 #library-banner {
 	padding: 1rem;
+	background: var(--uvalib-secondary-web-blue);
 }
 
 #library-link {
@@ -70,18 +103,15 @@ img {
 
 #slab-logo {
 	display:block;
-	width: 120px;
+	color: white;
+	text-decoration:none;
+	font-size: 1.2rem;
+	font-weight: 700;
+	padding: 0.5rem 0;
 
-	body.home & {
-		width: 300px;
+	.home & {
+		font-size: 3rem;
 	}
-
-	height: auto;
-}
-
-#slab-logo svg {
-	fill: #ffffff;
-	max-width:100%;
 }
 
 #global-navigation {
@@ -129,7 +159,14 @@ body.spatial-tech a.spatial-tech,
 body.our-work a.our-work {
 	font-weight: 600;
 	color: white;
-	border-bottom: 5px solid rgba($blue-alt-light,0.5);
+	&:after {
+		display:block;
+		content: " ";
+		width: 2px;
+		height: 10px;
+		background: rgba($blue-alt-light,0.75);
+		margin: 0 auto -0.5rem;
+	}
 }
 
 #secondary-navigation {
@@ -141,16 +178,12 @@ body.our-work a.our-work {
 #main > header,
 #main > article header
  {
-	background: rgba($brand-blue, 1);
+	background: rgba($blue-alt, 1);
 	color: white;
 }
 
-#library-banner {
-	background: rgba(0,0,0,.125);
-}
-
 #newsletter {
-	background: $teal-darker;
+	background: $teal-dark;
 	color: white;
 	padding: 1rem;
 	text-align: center;
@@ -206,7 +239,7 @@ section.feature {
 	& > header:first-of-type,
 	body.post & article header:first-of-type
 	{
-		background: rgba($brand-blue, 1);
+		background: rgba($blue-alt, 1);
 		color: white;
 		padding: 2rem 0;
 		display:flex;
