Updates nav info arch, w/1 exception...
Changes navigation to match latest plan of pages/org; adjusts /pages YAML, config, CSS to match; adds pages that didn't exist.
NOTE: eventually want first link to be “About” with a submenu to “Charter” (and eventually “Accessibility”), not "Opportunities". I left in the “Opportunities” > students opps setup for now instead, since the demo of dropdown is tied into that and I couldn't figure out in 30 seconds how to edit that

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -155,10 +155,10 @@ nav a:active,
 
 
 body.for-students a.opportunities,
-body.research-and-development a.code-design,
-body.makerspace a.makerspace,
-body.spatial-tech a.spatial-tech,
-body.our-work a.our-work {
+body.research-and-development a.expertise,
+body.makerspace a.collaborate,
+body.spatial-tech a.community,
+body.our-work a.scholarship {
 	font-weight: 600;
 	color: white;
 	&:after {
