Returns CC license to footer; edits Twitter mention

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,10 @@
         {% comment %}{% include nav-logo.html %}{% endcomment  %}
       </a>
       <a class="footer-logo__uva" href="https://www.library.virginia.edu/" aria-label="UVA Library home">
-        <img src="{{ '/assets/img/UVALIB_primary_white_web.png' | relative_url }}" alt="Twitter icon">
+        <img src="{{ '/assets/img/UVALIB_primary_white_web.png' | relative_url }}" alt="UVA Library logo">
+      </a>
+      <a class="footer-logo__license" rel="license" href="http://creativecommons.org/licenses/by/4.0/" aria-label="Creative Commons License">
+        <img alt="Creative Commons License" style="border-width:0" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by.svg"/>
       </a>
     </div>
 
