--- a/_includes/library-banner.html
+++ b/_includes/library-banner.html
@@ -1,4 +1,5 @@
-<!-- Unclear if places this is called are actually using it or not; delete file if not in use, or update this comment. -AWV 7/2/2024 -->
+<!-- Dark blue strip at very top of site, containing Library logo-->
+
 <div id="library-banner">
     <a href="https://www.library.virginia.edu" aria-label="University of
     Virginia Library" id="library-link"><img src="{{
